--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/starlight": "^0.31.1",
     "@lorenzo_lewis/starlight-utils": "^0.2.0",
     "astro": "^5.1.5",
+    "node-html-parser": "^7.0.1",
     "sharp": "^0.32.5"
   }
 }
