--- a/.github/workflows/astro.yaml
+++ b/.github/workflows/astro.yaml
@@ -25,6 +25,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Install pnpm
+        run: npm install -g pnpm
+
       - name: Setup Node.js and pnpm
         uses: actions/setup-node@v4
         with:
