--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/sitemap": "^3.2.1",
     "@astrojs/starlight": "^0.31.1",
     "@lorenzo_lewis/starlight-utils": "^0.2.0",
     "astro": "^5.1.5",
