--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro": "^5.1.5",
     "node-html-parser": "^7.0.1",
     "sharp": "^0.32.5",
-    "shiki": "^2.3.2"
+    "shiki": "^2.3.2",
+    "starlight-links-validator": "^0.14.3"
   }
 }
