--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "node-html-parser": "^7.0.1",
     "sharp": "^0.32.5",
     "shiki": "^2.3.2",
-    "starlight-links-validator": "^0.14.3"
+    "starlight-links-validator": "^0.14.3",
+    "starlight-openapi": "^0.12.1"
   }
 }
